Fix layout problems on main page

--- a/_sass/components/_sponsors.scss
+++ b/_sass/components/_sponsors.scss
@@ -7,7 +7,7 @@
   font-size: 0.9em;
 
   padding: {
-    top: 2em;
+    top: 0;
     bottom: 2em;
   };
   img {
